; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/d3dcompiler_43/extr_utils.c_free_ir_expr.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/d3dcompiler_43/extr_utils.c_free_ir_expr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hlsl_ir_expr = type { i32, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.hlsl_ir_expr*)* @free_ir_expr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @free_ir_expr(%struct.hlsl_ir_expr* %0) #0 {
  %2 = alloca %struct.hlsl_ir_expr*, align 8
  %3 = alloca i32, align 4
  store %struct.hlsl_ir_expr* %0, %struct.hlsl_ir_expr** %2, align 8
  store i32 0, i32* %3, align 4
  br label %4

4:                                                ; preds = %26, %1
  %5 = load i32, i32* %3, align 4
  %6 = icmp ult i32 %5, 3
  br i1 %6, label %7, label %29

7:                                                ; preds = %4
  %8 = load %struct.hlsl_ir_expr*, %struct.hlsl_ir_expr** %2, align 8
  %9 = getelementptr inbounds %struct.hlsl_ir_expr, %struct.hlsl_ir_expr* %8, i32 0, i32 1
  %10 = load i32*, i32** %9, align 8
  %11 = load i32, i32* %3, align 4
  %12 = zext i32 %11 to i64
  %13 = getelementptr inbounds i32, i32* %10, i64 %12
  %14 = load i32, i32* %13, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %17, label %16

16:                                               ; preds = %7
  br label %29

17:                                               ; preds = %7
  %18 = load %struct.hlsl_ir_expr*, %struct.hlsl_ir_expr** %2, align 8
  %19 = getelementptr inbounds %struct.hlsl_ir_expr, %struct.hlsl_ir_expr* %18, i32 0, i32 1
  %20 = load i32*, i32** %19, align 8
  %21 = load i32, i32* %3, align 4
  %22 = zext i32 %21 to i64
  %23 = getelementptr inbounds i32, i32* %20, i64 %22
  %24 = load i32, i32* %23, align 4
  %25 = call i32 @free_instr(i32 %24)
  br label %26

26:                                               ; preds = %17
  %27 = load i32, i32* %3, align 4
  %28 = add i32 %27, 1
  store i32 %28, i32* %3, align 4
  br label %4

29:                                               ; preds = %16, %4
  %30 = load %struct.hlsl_ir_expr*, %struct.hlsl_ir_expr** %2, align 8
  %31 = getelementptr inbounds %struct.hlsl_ir_expr, %struct.hlsl_ir_expr* %30, i32 0, i32 0
  %32 = load i32, i32* %31, align 8
  %33 = call i32 @free_instr_list(i32 %32)
  %34 = load %struct.hlsl_ir_expr*, %struct.hlsl_ir_expr** %2, align 8
  %35 = call i32 @d3dcompiler_free(%struct.hlsl_ir_expr* %34)
  ret void
}

declare dso_local i32 @free_instr(i32) #1

declare dso_local i32 @free_instr_list(i32) #1

declare dso_local i32 @d3dcompiler_free(%struct.hlsl_ir_expr*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
